fixed max hight of panel wraper to 50px on mobile

--- a/app/design/frontend/Nikal/esashop/web/scss/_modules/_header.scss
+++ b/app/design/frontend/Nikal/esashop/web/scss/_modules/_header.scss
@@ -539,6 +539,9 @@ body {
   .panel.wrapper {
     z-index: 0;
     min-height: 70px;
+    @media screen and (max-width: $sm-width) {
+      min-height: 50px;
+    }
   }
 }
 
